3.0.160.alpha.1 - 16th October 2023
- Updates for game version 3.4.3.

3.0.159 - 16th October 2023
- Updates for game version 3.4.3.

3.0.158 - 14th October 2023
- Added new option 'Show objectives'.  If enabled, quest objectives will be shown on the map.  It's enabled by default.
- The 'Remove map border' option has been removed.
- The 'Show coordinates' option no longer requires a UI reload once again.
- Removed 3.4.3 transitional code.

3.0.157 - 12th October 2023
- The world map frame is now sized as it was prior to game patch 3.4.3.  After installing this update, the map will appear larger at first.  You can resize it by enabling 'Unlock map frame' or you can click the 'Reset map layout' button in the Leatrix Maps panel.  The size change does not apply if 'Use default map' is enabled.
- You can no longer disable 'Remove map border'.  It's now always enabled.  This does not apply if 'Use default map' is enabled.

3.0.156 - 12th October 2023
- Updates for game version 3.4.3.
- If 'Unlock map frame' is enabled, you can drag the map by any of its borders once again.  You can always drag the map by the top border regardless of this setting.

3.0.155 - 12th October 2023
- Updates for game version 3.4.3.
- The 'Use default map' option is now available once again.
- Adjusted the scaling of points of interest icons (does not apply if 'Use default map' is enabled).

3.0.154 - 11th October 2023
- The 'Remove map border' option is now available once again.
- You can move the map by dragging the top border.
- You can scale the map by enabling 'Unlock map frame' and dragging the bottom-right corner of the map frame.

3.0.153 - 10th October 2023
- Preliminary update for game version 3.4.3.
- The 'Show coordinates' option now requires a UI reload.
- The 'Remove map border' and 'Use default map' options have been removed (at least for now).

3.0.138 - 28th June 2023
- Updated LibDBIcon.

3.0.137 - 24th June 2023
- Updated for game version 3.4.2.

3.0.135 - 11th June 2023